--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "4.2.1",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "3.4.1",
+    "moment": "2.24.0",
+    "phaser": "^3.19.0",
+    "phaser-component-library": "^2.0.0",
+    "popper.js": "1.15.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
